Fix element width overflow when comment input focused.

--- a/src/assets/style/components/NcoControl.styl
+++ b/src/assets/style/components/NcoControl.styl
@@ -81,10 +81,11 @@
 
         &_opt
             position absolute
+            left 0
+            right 0
             bottom 100%
 
             display none
-            width 100%
             height 32px
             padding 8px 0
             overflow hidden
